@@ -6,7 +6,10 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+July 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
+	* Elpuri goes through walls and destroys them
+	
 July 22 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Score system simplified
